tests/test-files/bad/RecordAliasDuplicateFields.elm

type alias Bad =
  { foo : String
  , foo : Int
  }
